--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <img src="./assets/img/hero.png" alt="hero image">
     </div>
-
+    <h2 style="text-align: center; margin-top: 20px; color: #d32600;">Products</h2>
     <div class="box-section">
         <div class="box">
             <img src="./../assets/img/grills2.jpg">
