This is my E-commerce website

--- a/public/about.html
+++ b/public/about.html
@@ -29,7 +29,6 @@
 
         <div class="nav-items " id="nav-item-wrap">
             <a href="./../index.html" class="nav-links">Home</a>
-            <a href="./menu.html" class="nav-links">Menu</a>
             <a href="./contact.html" class="nav-links">Contact Us</a>     
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
@@ -48,10 +47,10 @@
     </div>
     <div class="about-description">
         <h2>Great Food Comes First.</h2>
-        <p>Every day, more than 11 million guests visit Burger King restaurants around the world. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. Founded in 1954, Burger King is the second largest fast food hamburger chain in the world. The original Home of the Whopper, our commitment to premium ingredients, signature recipes, and family-friendly dining experiences is what has defined our brand for more than 50 successful years</p>
+        <p>Every day, more than 1 thousand guests visit Burger Quin restaurants around the world, to have a feel of our very tasty and sumptous Meals. We are known around the country for serving high-quality, great-tasting, and affordable food. Founded in 2016, Burger Quin is among the largest fast food hamburger chain in the country. The original Home of the Whopper, our commitment to premium ingredients, signature recipes, and family-friendly dining experiences is what has defined our brand for more than 4 successful years.</p>
         
         <h2 class="contact">Contact</h2>
-        <p>Burger King Corporation <br> Phone Number: 1-866-394-2493</p>
+        <p>Burger Quin Corporation <br> Phone Number: +234(0)8182135993</p>
     </div>
     
 </main>
