--- a/public/contact.html
+++ b/public/contact.html
@@ -26,7 +26,6 @@
 
         <div class="nav-items " id="nav-item-wrap">
             <a href="./../index.html" class="nav-links">Home</a>
-            <a href="./menu.html" class="nav-links">Menu</a>
             <a href="./about.html" class="nav-links ">About</a>
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
@@ -43,7 +42,7 @@
 
 
     <main>
-        <h3 class="page-title">Contact Me</h3>
+        <h3 class="page-title">Contact Us</h3>
 
         <div class="contact-types">
             <div class="contact">
@@ -53,9 +52,9 @@
             </div>
 
             <div class="contact">
-                <a href="mailto:pamelaodeh@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:Burgerquin@gmail.com"><i class="fas fa-envelope"></i></a>
                 <h3>Email</h3>
-                <p>pamelaodeh@gmail.com</p>
+                <p>Burgerquin@gmail.com</p>
             </div>
 
             <div class="contact">
